# gym-knowledge-repository

./: .gitignore  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  yt_kg_pipeline.md
.github/workflows/: ci.yml  deploy-pages.yml
_bmad-output/dev-briefs/: epic-1-dev-brief.md
_bmad-output/dev-briefs/story-prompts/: 1.2-download.md  1.3-transcribe.md  1.4-chunk-embed.md  1.5-orchestrator.md  5.1-video-filter.md  5.2-pipeline-parallelization.md  S1-db-robustness.md  S2-cite-pipeline.md  (+5 more)
_bmad-output/planning-artifacts/: epics.md
config/: channels.yaml  entity_overrides.yaml  eval_gold.example.json  extraction_schema.py  papers.yaml  synthesis_questions.yaml
docker/: qwen-coder.Modelfile
docs/: architecture.html  graph.html  index.html  papers.html  stories.md
docs/data/: entities.json  graph.json  meta.json  videos.json
scripts/: _clear_stale.py  _create_epic5_issues.py  _create_issues.ps1  _create_issues.py  _debug_db.py  _graph_export.py  _pipeline_status.py  _status.py  graph_viewer.html  ollama_init.ps1  ollama_init.py  run_epic1_aider.ps1  run_epic1_aider.py  run_pipeline.py  start_mcp.py
tests/: test_pipeline.py
web/: app.js  data.js  index.html  style.css
yt_kg/: __init__.py  chunk.py  cite_extract.py  cite_pdf.py  cite_resolve.py  classify.py  db.py  discover.py  discover_papers.py  download.py  embed.py  enrich_papers.py  eval_extract.py  export.py  export_papers.py  extract.py  filter.py  graph.py  lit_discover.py  mcp_server.py  promote.py  rag_server.py  resolve.py  synthesize.py  transcribe.py  validate.py
yt_kg/rag/: __main__.py
(+3 files in other folders)
